2006-09-06  Till Kamppeter <till.kamppeter@gmx.net>

	* printer/Epson-Stylus_C65.xml: This was copied from the C68,
	  but is was forgotten to set the model name to C65. Fixed.

2006-09-05  Till Kamppeter <till.kamppeter@gmx.net>

	* printer/Samsung-ML-1520.xml, printer/Samsung-ML-1610.xml,
	  printer/Samsung-ML-1740.xml, printer/Samsung-ML-2010.xml,
	  printer/Samsung-ML-2250.xml: New printers from user contributions.

	* driver/splix.xml, printer/Samsung-ML-1510.xml,
	  printer/Samsung-ML-1710.xml: New Samsung SPL2 driver "splix".

	* driver/gdi.xml, driver/Postscript.xml, driver/pxlmono.xml,
	  driver/ljet4.xml, driver/ljet4d.xml: Added new Samsung printers.

2006-08-31  David Suffield <david.suffield@hp.com>
	* printer/: Added 
	HP-PhotoSmart_C6100.xml 
	HP-PhotoSmart_C7100.xml 
	HP-PhotoSmart_A310.xml HP-PhotoSmart_D5060.xml  
	HP-PhotoSmart_Pro_B8300.xml HP-PhotoSmart_C5100.xml
	HP-PhotoSmart_D5100.xml 

2006-08-18  Till Kamppeter <till.kamppeter@gmx.net>

	* printer/SiPix-Pocket_Printer_A6.xml: Fixed model name.

2006-08-18  George Liu <george.liu@ussj.ricoh.com>

	* Added 66 Postscript PPD file and 54 pxlmono PPD file for 66 printer models.
	* Updated Postscript.xml, pxlmono.xml and pxlcolor.xml.
         
            added:
            db/source/PPD/Gestetner/PS/Gestetner-C7526dn_PS.ppd
            db/source/PPD/Gestetner/PS/Gestetner-C7531dn_PS.ppd
            db/source/PPD/Gestetner/PS/Gestetner-MP1100_DSm7110_PS.ppd
            db/source/PPD/Gestetner/PS/Gestetner-MP1350_DSm7135_PS.ppd
            db/source/PPD/Gestetner/PS/Gestetner-MP5500_DSm755_PS.ppd
            db/source/PPD/Gestetner/PS/Gestetner-MP6500_DSm765_PS.ppd
            db/source/PPD/Gestetner/PS/Gestetner-MP7500_DSm775_PS.ppd
            db/source/PPD/Gestetner/PS/Gestetner-MP9000_DSm790_PS.ppd
            db/source/PPD/Gestetner/PS/Gestetner-MPC1500_GS106_PS.ppd
            db/source/PPD/Gestetner/PS/Gestetner-MPC2500_DSc525_PS.ppd