@@ -32,7 +32,7 @@
     </parallel>
   </autodetect>
   <functionality>A</functionality>
-  <driver>hpijs</driver>
+  <driver>ljet4</driver>
   <!--affiliate keys; modify and face my wrath!-->
   <buyit>buy:5867,amz:B00000JFNCcfs:100050,cfs(xi):5292</buyit><!--no "contrib_url"-->
   <comments>
