@@ -33,8 +33,7 @@
     </general>
   </autodetect>
   <functionality>A</functionality>
-  <driver>hpijs</driver><!--verified--><!--affiliate keys; modify and face my wrath!-->
-  <buyit>buy:5866</buyit><!--no "contrib_url"-->
+  <driver>ljet4</driver>
   <comments>
     <en>
 
