@@ -1,3 +1,10 @@
+2006-09-13  Till Kamppeter <till.kamppeter@gmail.com>
+
+	* printer/HP-LaserJet_1100.xml, printer/HP-LaserJet_1100A.xml:
+	  Changed recommended driver from "hpijs" to "ljet4". "hpijs"
+	  is too light and "ljet4" prints smoother text (Ubuntu bug
+	  #16703).
+	
 2006-09-06  Till Kamppeter <till.kamppeter@gmx.net>
 
 	* printer/Epson-Stylus_C65.xml: This was copied from the C68,
